service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: kloudspot-service
  namespace: kloudspot
spec:
  type: NodePort
  selector:
    app: kloudspot-app
  ports:
    - protocol: TCP 
      port: 80
      targetPort: 80
      nodePort: 32134
